# ya-snippets

./: LICENSE  cabal.project  ya-snippets.cabal
Ya/Snippets/: asynchronous-computations.hs  coin-operated-turnstile.hs  components-of-natural-transformations.hs  context-dependent-search-1.hs  context-dependent-search-2.hs  context-dependent-search.hs  context-sensitive-pair-bonding.hs  filtering-elements-in-list.hs  finding-an-element-by-iteration.hs  finding_items_within_datastrucures.hs  flattening-sublists-into-list.hs  initialising-datastructures.hs  jointed-functor-compositions.hs  linear-algebra-primitives.hs  list-concatenation.hs  list_concatenation.hs  manipulating-fields-in-records.hs  moving-coordinates.hs  moving_coordinates.hs  statefulness-and-reachability.hs  sublist-as-sum-threshold.hs  transformations-functors-categories.hs
